[package]
name = "libfuse"
version = "0.0.0"
description = "A file system example using libfuse 3 with bindgen"
publish = false
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"

[lib]
name = "libfuse"
path = "src/lib.rs"

[dependencies]
bitflags = "1.1"
libfuse-sys = { path = "libfuse-sys" }
libc = "0.2"
log = "0.4"
nix = "0.15"
pretty_env_logger = "0.2"

[dev-dependencies]
structopt = "0.3"

[workspace]
members = [
  "libfuse-sys",
]
