[package]
name = "libfuse"
version = "0.0.0"
description = "A file system example using libfuse 3 with bindgen"
publish = false
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"

[lib]
name = "libfuse"
path = "src/lib.rs"

[dependencies]
bitflags = "1.1"
libc = "0.2"
log = "0.4"

[dependencies.libfuse-sys]
version = "0.0.0"
path = "libfuse-sys"
features = ["bindgen"]

[dev-dependencies]
pretty_env_logger = "0.2"
structopt = "0.3"
chrono = "0.4"

[features]
cache-readdir = []

[workspace]
members = [
  "libfuse-sys",
]
