[package]
name = "libfuse-sys"
version = "0.0.0"
publish = false
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"

[build-dependencies.bindgen-crate]
package = "bindgen"
version = "0.51"
optional = true

[features]
default = ["bindgen"]
bindgen = ["bindgen-crate"]
cache-readdir = []
